--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           type="button"
           class="menu-btn"
           aria-expanded="false"
-          aria-controls="menu-continer"
+          aria-controls="menu-container"
           data-menu-button
         >
           <svg width="40" height="40" aria-label="переключатель мобильного меню">
