--- a/index.html
+++ b/index.html
@@ -156,15 +156,37 @@
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="activity-list">
             <li class="activity-list__item">
-              <img src="./images/box-1.jpg" alt="Десктопные приложения" width="370" height="294" />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/desktop/box-1.jpg 1x, ./images/desktop/box-1@2x.jpg 2x"
+                />
+
+                <img src="./images/desktop/box-1.jpg" alt="Десктопные приложения" />
+              </picture>
+
               <p class="activity-list__title">Десктопные приложения</p>
             </li>
             <li class="activity-list__item">
-              <img src="./images/box-2.jpg" alt="Мобильные приложения" width="370" height="294" />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/desktop/box-2.jpg 1x, ./images/desktop/box-2@2x.jpg 2x"
+                />
+
+                <img src="./images/desktop/box-2.jpg" alt="Десктопные приложения" />
+              </picture>
               <p class="activity-list__title">Мобильные приложения</p>
             </li>
             <li class="activity-list__item">
-              <img src="./images/box-3.jpg" alt="Дизайнерские решения" width="370" height="294" />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/desktop/box-3.jpg 1x, ./images/desktop/box-3@2x.jpg 2x"
+                />
+
+                <img src="./images/desktop/box-3.jpg" alt="Десктопные приложения" />
+              </picture>
               <p class="activity-list__title">Дизайнерские решения</p>
             </li>
           </ul>
